--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {%- include head.html -%}
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {%- seo -%}
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  </head>
 
   <body>
 
@@ -10,9 +16,7 @@
         {{ content }}
       </div>
     </main>
-
-    {%- include footer.html -%}
-
+    
   </body>
 
 </html>
